# LeonardOS

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  Makefile  Makefile.build  Makefile.run  Makefile.test  README.md  coding_standard.md  install_dependencies.bash
dev/: CMakeLists.txt  linker.ld  main.c
dev/bootloader/src/: boot.s
dev/common/: CMakeLists.txt
dev/common/memAllocator/include/: memAllocator.h
dev/common/memAllocator/src/: memAllocator.c  memAllocatorPrv.h
dev/common/memory/: README.md
dev/common/memory/include/: memory.h
dev/common/memory/src/: memory.c
dev/common/memory_alloc/include/: memory_alloc.h
dev/common/stdlib/: README.md
dev/common/stdlib/include/: stdlib.h
dev/common/stdlib/src/: stdlib.c
dev/common/string/: README.md
dev/common/string/include/: string.h
dev/common/string/src/: string.c
dev/common/string_ops/include/: string_ops.h
dev/common/string_utils/include/: string_utils.h
dev/common/types/: README.md
dev/common/types/include/: types.h
dev/core/: CMakeLists.txt  linker.ld  main.c
dev/core/UART/include/: UART.h
dev/core/UART/src/: UART.c  UARTPrv.h
dev/core/bootloader/src/: boot.s
dev/core/kernelPrint/include/: kernelPrint.h
dev/core/kernelPrint/src/: kernelPrint.c
dev/core/paging/include/: paging.h
dev/core/paging/src/: pagingData.c  pagingEnableMmu.c  pagingMMUConfig.c  pagingMapPage.c  pagingPrv.h
dev/image/: CMakeLists.txt  README.md  linker.ld
dev/kernel/: CMakeLists.txt
dev/kernel/BMT/: README.md
dev/kernel/BMT/include/: BMT.h
dev/kernel/BMT/src/: BMT_add_elf.c  BMT_build_table.c  BMT_copy_binaries.c  BMT_data.c  BMT_get_kernel_entry.c  BMT_get_kernel_stack_top.c  BMT_init.c  BMT_print_table.c  BMT_prv.h
dev/kernel/ELF/: README.md
dev/kernel/ELF/include/: ELF.h
dev/kernel/ELF/src/: ELF.c  ELF_prv.h
dev/kernel/FPU/: README.md
dev/kernel/FPU/include/: FPU.h
dev/kernel/FPU/src/: FPU_init.s
dev/kernel/UART/: README.md
dev/kernel/UART/include/: UART.h
dev/kernel/UART/src/: UART.c  UART_prv.h
dev/kernel/bmt/: CMakeLists.txt  README.md
dev/kernel/bmt/code/: CMakeLists.txt
dev/kernel/boot/: CMakeLists.txt  README.md
dev/kernel/boot/code/: CMakeLists.txt
dev/kernel/boot/src/: boot.s  boot_data.S  boot_main.S  boot_main.s  boot_parse_memory.S  boot_print.S  boot_print_addr.S  boot_prv.h
dev/kernel/boot_bin/: CMakeLists.txt  README.md  boot_linker.ld  linker.ld  linker_qemu.ld  linker_sections.ld
dev/kernel/clock/: CMakeLists.txt  README.md
dev/kernel/clock/code/: CMakeLists.txt
dev/kernel/clock/include/: clock.h
dev/kernel/clock/src/: clock_data.c  clock_get_cycle_count.s  clock_get_frequency.s  clock_get_time.c  clock_init.c  clock_prv.h
dev/kernel/console/: README.md
dev/kernel/console/code/: CMakeLists.txt
dev/kernel/containers/: CMakeLists.txt  README.md
dev/kernel/containers/code/: CMakeLists.txt
dev/kernel/core/: CMakeLists.txt  README.md  core_main.c  core_main_prv.h  main.c
dev/kernel/core/MMIO/: README.md
dev/kernel/core/UART/: README.md
dev/kernel/core/boot/: README.md
dev/kernel/core/code/: CMakeLists.txt
dev/kernel/core/serial/: README.md
dev/kernel/core/syscall/: README.md
dev/kernel/core_bin/: CMakeLists.txt  README.md  core_linker.ld  linker.ld
dev/kernel/elf/: CMakeLists.txt  README.md
dev/kernel/elf/code/: CMakeLists.txt
dev/kernel/formatter/: README.md
dev/kernel/formatter/code/: CMakeLists.txt
dev/kernel/fpu/: CMakeLists.txt  README.md
dev/kernel/fpu/code/: CMakeLists.txt
dev/kernel/gic/: README.md
dev/kernel/gic/code/: CMakeLists.txt
dev/kernel/irq/: README.md
dev/kernel/irq/code/: CMakeLists.txt
dev/kernel/lib/: CMakeLists.txt
dev/kernel/lib/containers/: CMakeLists.txt
dev/kernel/lib/memory/: CMakeLists.txt
dev/kernel/lib/string/: CMakeLists.txt
dev/kernel/lib_containers/: CMakeLists.txt  README.md
dev/kernel/lib_memory/: CMakeLists.txt
dev/kernel/lib_memory/alloc/: README.md
dev/kernel/lib_memory_ops/: CMakeLists.txt
dev/kernel/lib_memory_ops/include/: memory_ops.h
dev/kernel/lib_memory_ops/src/: memory_ops.c
dev/kernel/lib_string/: CMakeLists.txt
dev/kernel/lib_string/ops/: README.md
dev/kernel/lib_syscall/: CMakeLists.txt  README.md
dev/kernel/lib_syscall/include/: syscall.h
dev/kernel/lib_syscall/src/: syscall.c
dev/kernel/lib_user/: CMakeLists.txt
dev/kernel/lib_user/include/: libuser.h
dev/kernel/lib_user/src/: libuser.c
dev/kernel/libuser/: CMakeLists.txt  README.md
dev/kernel/libuser/code/: CMakeLists.txt
dev/kernel/memory/: CMakeLists.txt  README.md
dev/kernel/memory_ops/: CMakeLists.txt  README.md
dev/kernel/mmio/: CMakeLists.txt  README.md
dev/kernel/mmu/: README.md
dev/kernel/pcb/: CMakeLists.txt  README.md
dev/kernel/printer/: CMakeLists.txt  README.md
dev/kernel/scheduler/: CMakeLists.txt  README.md
dev/kernel/seh/: CMakeLists.txt  README.md
dev/kernel/serial/: CMakeLists.txt  README.md
dev/kernel/spec/: README.md  linker.ld
dev/kernel/stream/: CMakeLists.txt  README.md
dev/kernel/strings/: CMakeLists.txt  README.md
dev/kernel/syscall/: CMakeLists.txt  README.md
dev/kernel/types/: CMakeLists.txt  README.md
dev/kernel/uart/: CMakeLists.txt  README.md
dev/kernelPrint/include/: kernelPrint.h
dev/kernelPrint/src/: kernelPrint.c
dev/user/: CMakeLists.txt  linker_sections.ld
dev/user/count_down/: CMakeLists.txt  README.md  linker.ld  linker_qemu.ld  linker_rpi.ld
dev/user/hello_world/: CMakeLists.txt  README.md  linker.ld  linker_qemu.ld  linker_rpi.ld
dev/user/libuser/: CMakeLists.txt  README.md
dev/user/shell/: CMakeLists.txt  README.md  linker.ld
tests/: CMakeLists.txt  linker.ld  tests_list.yaml
tests/libtest/: CMakeLists.txt  README.md
tests/libtest/include/: libtest.h
tests/libtest/src/: libtest_finish.c  libtest_memcpy.c  libtest_print_str.c  libtest_run.c  libtest_start.c
tests/print_int/: CMakeLists.txt
tests/print_int/cases/: print_int_negative.c  print_int_positive.c
tests/print_int/entry/: test_entry.c  test_entry.h
tests/print_int/include/: print_int.h
(+633 files in other folders)
